feat: added cintia's information

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/logoAdv.png" />
-    <title>
-      Magalhães Advocacia | Excelência Jurídica e Defesa Estratégica
-    </title>
+    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <title>Cíntia Albuquerque | Advogada Marítima</title>
 
     <meta
       name="description"
@@ -35,16 +33,19 @@
 
     <meta
       property="og:image"
-      content="https://landingpage-adv.vercel.app/og-image.jpg"
+      content="https://landingpage-adv.vercel.app/og-image.jpeg"
     />
     <meta
       property="og:image:secure_url"
-      content="https://landingpage-adv.vercel.app/og-image.jpg"
+      content="https://landingpage-adv.vercel.app/og-image.jpeg"
     />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Magalhães Advocacia" />
+    <meta
+      property="og:image:alt"
+      content="Cíntia Albuquerque - Advocacia Marítima"
+    />
     <meta property="og:locale" content="pt_BR" />
   </head>
   <body>
