--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
     <meta
       name="keywords"
-      content="advocacia, advogado, escritório de advocacia, direito civil, direito trabalhista, direito previdenciário, consultoria jurídica"
+      content="advocacia, advogado, escritório de advocacia, direito previdenciário, consultoria jurídica, marítima, offshore"
     />
 
-    <meta name="author" content="Magalhães Advocacia" />
+    <meta name="author" content="Cíntia Albuquerque | Advogada Marítima" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="pt-BR" />
     <!-- Open Graph (Instagram, WhatsApp, LinkedIn) -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://landingpage-adv.vercel.app/" />
+    <meta property="og:url" content="https://template-adv-cintia.vercel.app/" />
     <meta
       property="og:title"
-      content="Magalhães Advocacia | Excelência Jurídica"
+      content="Cíntia Albuquerque | Advogada Marítima"
     />
     <meta
       property="og:description"
@@ -33,11 +33,11 @@
 
     <meta
       property="og:image"
-      content="https://landingpage-adv.vercel.app/og-image.jpeg"
+      content="https://template-adv-cintia.vercel.app/og-image.jpeg"
     />
     <meta
       property="og:image:secure_url"
-      content="https://landingpage-adv.vercel.app/og-image.jpeg"
+      content="https://template-adv-cintia.vercel.app/og-image.jpeg"
     />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
